Fix img Address To Succesfully Display Geico Image

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -54,7 +54,7 @@
 
 	<aside>
 
-		<p><img src="\phase-0-dev-box\phase-0\week-2\imgs\geicoimg.png"> FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <a href="https://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-315-6349, 24 HOURS A DAY.</p>
+		<p><img src="..\imgs\geicoimg.png"> FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <a href="https://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-315-6349, 24 HOURS A DAY.</p>
 
 	</aside>
 
