Update Berkshire Mod

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -1,70 +1,97 @@
 <!DOCTYPE html>
-<html>
+
+<html class="text">
 
 <head>
 
 	<meta charset="utf-8">
+
+	<link rel="stylesheet" type="text/css" href="/Users/luisplaz/Desktop/Dev Bootcamp/phase-0/week-3/stylesheets/my-berkshire-stylesheet.css">
+
 	<title>
 		BERKSHIRE HATHAWAY INC.
 	</title>
 
 </head>
 
-<body>
+<body class="">
 
-	<header>
+	<div class="line">
 
-		<h3> BERSHIRE HATHAWAY INC. 3555 Farnam Street Suite 1440 Omaha, NE 68131 Oficcial Home Page </h3>
+		<header>
 
-	</header>
+		<div class="round">
 
-	<nav>
+			<img src="http://www.shalomlife.com/img/2015/05/29209/warren_buffett_/400_300_warren_buffett_.jpg" class="img-size"/>
 
-		<ul>
+		<h3> 
 
-			<li><a href="#">A Mesagge From Warren E. Buffett</a></li>
+			<span class="separateletters">B</span>ERKSHIRE <span class="separateletters">H</span>ATHAWAY <span class="fsmall">INC.</span>
 
-			<li><a href="#">News Releases</a> Updated July 1, 2014</li>
+			<span class="nline fsmall">3555 Farnam Street</span>
 
-			<li><a href="#">Annual & Interim Reports</a> Updated May 2, 2014</li>
+			<span class="nline fsmall">Suite 1440 Omaha, NE 68131</span>
 
-			<li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a> Updated March 1, 2014</li>
+			<span class="nline fmed">Official Home Page</span>
 
-			<li><a href="#">Link to SEC Filings</a></li>
+		</h3>
 
-			<li><a href="#">Charlie Munger's Letters to Wesco Shareholders</a></li>
+		</div>
 
-			<li><a href="#">Corporate Governance</a></li>
+		</header>
 
-			<li><a href="#">Annual Meeting Information</a></li>
+	</div>
 
-			<li><a href="#">Links to Berkshire Subsidiary Companies</a></li>
+	<nav class="line">
 
-			<li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a> Updated January 10, 2010</li>
+	<table>
 
-			<li><a href="#">Owner's Manual</a> To view the Owner's Manual you may use Adobe Acrobat&reg; Reader&reg; software. Click <a href="#">here</a> to download. Updated March 1, 2014</li>
+		<tr>
 
-			<li><a href="#">Order Berkshire Activewear On-line</a></li>
+			<td>
+				<ul>
+					<li><a href="http://www.berkshirehathaway.com/">A Message From Warren E. Buffett</a></li>
+					<li><a href="http://www.berkshirehathaway.com/">Annual & Interim Reports</a><span class="nline fxsmall">Updated May 2, 2014</span></li>
+					<li><a href="http://www.berkshirehathaway.com/">Link to SEC Filings</a></li>
+					<li><a href="http://www.berkshirehathaway.com/">Links to Berkshire Subsidiary Companies</li>
+					<li><a href="http://www.berkshirehathaway.com/">Corporate Governance</a></li>
+					<li><a href="http://www.berkshirehathaway.com/">Owner's Manual</a><span class="nline fxsmall">To view the Owner's Manual you may use Adobe Acrobat&reg; Reader&reg; software. Click <a href="http://www.berkshirehathaway.com/">here</a> to download. Updated March 1, 2014</span></a></li>
+					<li><a href="http://www.berkshirehathaway.com/">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a><span class="nline fxsmall">Updated August 30, 2012</span></a></li>
+				</ul>
+			</td>
+    		<td>
+    			<ul class="pad">
+					<li><a href="http://www.berkshirehathaway.com/">News Releases</a><span class="nline fxsmall">Updated July 1, 2014</span></li>
+					<li><a href="http://www.berkshirehathaway.com/">Warren Buffett's Letters to Berkshire Shareholders</a><span class="nline fxsmall">Updated March 1, 2014</span></li>
+					<li><a href="http://www.berkshirehathaway.com/">Charlie Munger's Letters to Wesco Shareholders</li>
+					<li><a href="http://www.berkshirehathaway.com/">Annual Meeting Information</a></li>
+					<li><a href="http://www.berkshirehathaway.com/">Comparative Rights and Relative Prices of Class A and B Stock</a><span class="nline fxsmall">Updated January 10, 2010</span></li>
+					<li><a href="http://www.berkshirehathaway.com/">Order Berkshire Activewear On-line</a></li>
+				</ul>
+			</td>
+		</tr>
 
-			<li><a href="#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a> Updated August 30, 2012</li>
-
-		</ul>
+		</table>
 
 	</nav>
 
-	<aside>
+	<aside class="line">
 
-		<p><img src="..\imgs\geicoimg.png"> FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <a href="https://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-315-6349, 24 HOURS A DAY.</p>
+		
+		<p><img src="..\imgs\geicoimg.png" class="images"> <span class="nline fxsmall middle xsmarg"> FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY</span><span class="nline fxsmall middle"><a href="https://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-315-6349, 24 HOURS A DAY.</span>
+
+		</p>
 
 	</aside>
 
 	<footer>
 
-		<p>If you have any comments about our WEB page, you can either write us at the address shown above or you can e-mail us <a href="mailto:berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a>.However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
-
-		<p><a href="#">Legal Disclaimer</a></p>
+		<div class="line"><p class="fsmall">If you have any comments about our WEB page, you can either write us at the address shown above or you can e-mail us at <a href="mailto:berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a>.However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
 		
-		<p> Copyright &copy; 1978-2014 Berkshire Hathaway Inc.</p>
+		</div>
+		<p><a href="http://www.berkshirehathaway.com/">Legal Disclaimer</a></p>
+		
+		<p class="fxsmall"> Copyright &copy; 1978-2014 <span class="fbold">Berkshire Hathaway Inc.</span> </p>
 
 	</footer>
 
