Modify Berkshire Link

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 
-	<link rel="stylesheet" type="text/css" href="/Users/luisplaz/Desktop/Dev Bootcamp/phase-0/week-3/stylesheets/my-berkshire-stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="../../week-3/stylesheets/my-berkshire-stylesheet.css">
 
 	<title>
 		BERKSHIRE HATHAWAY INC.
