Add GPS 2.1 Files

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -1,7 +1,7 @@
 <!--
 Write your names here:
-1.
-2.
+1.Luis Fernando Plaz
+2. Jamar Gibbs
 We spent [#] hours on this challenge.
 -->
 
@@ -279,5 +279,17 @@ We spent [#] hours on this challenge.
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
   <!-- Add your reflection here as a comment. -->
+<!-- Did you feel more confident with CSS positioning? 
+
+Yes. I felt a ot more confident with css positioning now although some trial and error was still needed. In the end, we were able to position our elements as we wanted.
+
+How did you do with the learning competencies in general? 
+
+We did great, I did not feel we had any trouble or ay great gaps in our learning competencies.
+
+-->
+
+
+
   </body>
 </html>
